--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="priyan.html">new</a>
+            <a href="ppppp.html">new</a>
             <a href = "index.html">Home</a>
             <a href = "aboutus.html">About Us</a>
             <a href = "contactus.html">Contact Us</a>
