--- a/contactus.html
+++ b/contactus.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href = "index.html">Home</a>
-            <a href = "aboutus.html">About Us</a>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Contact Us</h2>
-            <p><b><u><big>Priyanhsu Kumar</big></u></b></p>
-            <p>Currently pursuing BS in Data Science & Applications from IIT Madras</p>
-            <img src="me.jpeg" height="200px" width="200px" alt="priyanshu">
-            <p>Email:22f300**36@ds.study.iitm.ac.in</p>
-            <p>Phone: +91-62063162**</p>
-            <p>Address: IIT Madras, Chennai, Tamil Nadu, India</p>
-            <p><i>Click to visit my Social Media Profiles</i></p>
-            <a href="https://www.linkedin.com/in/pk24india/"> <img src="lin.png" height="50px" width="50px" alt="Linkedin Profile"></a>
-            <a href="https://www.youtube.com/@CodeHype-Priyanshu"> <img src="yt.png" height="50px" width="=50px" alt="youtube"> </a>
-            <a href="https://github.com/pkIITM/">
-                <img src="git.png" height="50px" width="50px" alt="github">
-            </a>
-        </section>
+  <div class="container">
+    <h1>Contact Me</h1>
+    <form id="travelForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
 
-    </main>
+      <label for="age">Age:</label>
+      <input type="number" id="age" name="age" required>
+
+      <label for="phone">Phone Number:</label>
+      <input type="tel" id="phone" name="phone" required>
+
+      <label for="query">Query:</label>
+      <textarea id="query" name="query" rows="4" required></textarea>
+
+      <label for="email">Email ID:</label>
+      <input type="text" id="email" name="email" required>
+
+      <button type="submit">Submit</button>
+    </form>
+
+    <!-- Placeholder for response message -->
+    <p id="responseMessage"></p>
+
+    <!-- Placeholder for displaying submitted data -->
+    <div id="formDataDisplay"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
-
 </html>
